--- a/TimingAssist.csproj
+++ b/TimingAssist.csproj
@@ -161,9 +161,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\Hooks.cs" />
+    <Compile Include="src\Config.cs" />
     <Compile Include="src\Main.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
